# src/routes/auth.routes.js
@@ -1,6 +1,6 @@
 import { Router } from 'express';
-import { register, login } from '../controllers/auth.controller.js';
-import { registerValidationRules, loginValidationRules } from '../middlewares/validate.js';
+import { register, login, registerOwner } from '../controllers/auth.controller.js';
+import { registerValidationRules, loginValidationRules, registerOwnerValidationRules } from '../middlewares/validate.js';
 
 const router = Router();
 
@@ -9,5 +9,8 @@ router.post('/register', registerValidationRules, register);
 
 // POST /api/auth/login
 router.post('/login', loginValidationRules, login);
+
+// POST /api/auth/register-owner
+router.post('/register-owner', registerOwnerValidationRules, registerOwner);
 
 export default router;
